# food-traceability-system

food-traceability-system-front-end/: package.json
food-traceability-system-front-end/public/: index.html
food-traceability-system-front-end/src/: AccountSelector.js  App.js  FoodTraceability.css  FoodTraceability.js  Interactor.js  PoeModule.js  TemplateModule.js
food-traceability-system-front-end/src/config/: common.json  index.js  types.json
food-traceability-system-front-end/src/substrate-lib/components/: TxButton.js
food-traceability-system/node/: Cargo.toml
food-traceability-system/node/src/: benchmarking.rs  chain_spec.rs  command.rs  rpc.rs  service.rs
food-traceability-system/pallets/food-traceability/: Cargo.toml
food-traceability-system/pallets/food-traceability/rpc/: Cargo.toml
food-traceability-system/pallets/food-traceability/rpc/runtime-api/: Cargo.toml
food-traceability-system/pallets/food-traceability/rpc/runtime-api/src/: lib.rs
food-traceability-system/pallets/food-traceability/rpc/src/: lib.rs
food-traceability-system/pallets/food-traceability/src/: lib.rs  types.rs
food-traceability-system/runtime/: Cargo.toml
food-traceability-system/runtime/src/: lib.rs
