[package]
name = "pallet-food-traceability-rpc"
version = "0.1.0"
edition = "2021"
description = 'RPC methods for the food traceability pallet'

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
codec = { package = "parity-scale-codec", version = "3.2.2", default-features = false, features = [
  "derive",
] }

jsonrpsee = { version = "0.16.2", features = ["server", "macros"] }


# Substrate packages
sp-core = { version = "7.0.0", default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.39" }
sp-api = { default-features = false, version = "4.0.0-dev", git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.39" }
sp-blockchain = { default-features = false, version = "4.0.0-dev", git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.39" }
sp-runtime = { default-features = false, version = "7.0.0", git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.39" }


# local packages
pallet-food-traceability-rpc-runtime-api = { path = "./runtime-api", default-features = false }

[features]
default = ["std"]
std = [
  "codec/std",
  "sp-api/std",
  "sp-core/std",
  "sp-runtime/std",
  "pallet-food-traceability-rpc-runtime-api/std",
]
